[tool.poetry]
name = "duck-orm"
version = "1.0.2"
description = "ORM Async for Python"
authors = ["Rich <richelton14@gmail.com>"]
readme = "README.md"
license = "LICENSE"
keywords = [
    "orm",
    "async",
    "aiohttp",
    "asyncio",
    "databases",
    "database",
    "postgres",
    "sqlite"
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Homepage = "https://github.com/richecr/duckorm"
Documentation = "https://richecr.github.io/duck-orm/"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.19.0"
databases = "^0.7.0"

[tool.poetry.dev-dependencies]
aiosqlite = "^0.17.0"
asyncpg = "^0.26.0"
mkdocs-material = "^7.1.2"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
pytest = "^7.3.1"

[tool.poetry.extras]
postgresql = ["asyncpg"]
postgresql-aiopg = ["aiopg"]
sqlite = ["aiosqlite"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
